--- a/menu1.html
+++ b/menu1.html
@@ -3,7 +3,7 @@
 
     <!-- En-tête de la page -->
 
-    <head>
+   <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Ohmyfood">
@@ -24,68 +24,85 @@
         <header>
             <a href="accueil.html"><i class="fas fa-arrow-left"></i></a>
             <img src="images/logo/ohmyfood@2x.svg" alt="Logo">
-            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
         </header>
 
+        <img src="images/restaurants/jay-wennington-n_y88twmgwa-uns.png" alt="La palette du goût">
         <div class="titre">
             <h1>La palette du goût</h1>
-            <i class="far fa-heart"></i>
+            <i class="far fa-heart fa-lg"></i>
         </div>
 
-        <section>
-            <h2>Entrées</h2>
-            <div class="entrees">
-                <h3>Fricassée d'escargot</h3>
-                <p>Au piment d'espelette <span>25€</span></p>
-                <button><i class="fas fa-check-circle"></i></button>
-            </div>
-            <div class="entrees">
-                <h3>Foie gras de canard mi-cuit</h3>
-                <p>Et ses copeaux de truffe noire <span>35€</span></p>
-                <button><i class="fas fa-check-circle"></i></button>
-            </div>
-            <div class="entrees">
-                <h3>Oeuf au plat</h3>
-                <p>Assaisonné à la truffe sur lit de caviar <span>20€</span></p>
-                <button><i class="fas fa-check-circle"></i></button>
-            </div>
-            <div class="plats">
-                <h3>Filet de boeuf aux herbes</h3>
-                <p>Accompagné de sa ribambelle de légumes <span>40€</span></p>
-                <button><i class="fas fa-check-circle"></i></button>
-            </div>
-            <div class="plats">
-                <h3>Parmentier de queue de boeuf</h3>
-                <p>À la truffe noire sur sa purée de panais <span>35€</span></p>
-                <button><i class="fas fa-check-circle"></i></button>
-            </div>
-            <div class="plats">
-                <h3>Filet de turbot</h3>
-                <p>Aux agrumes <span>44€</span></p>
-                <button><i class="fas fa-check-circle"></i></button>
-            </div>
-        </section>
+        <section class="carte-menu">
 
-        <section>
-            <h2>Desserts</h2>
-            <div class="desserts">
-                <h3>Paris-Brest</h3>
-                <p>Revisité <span>18€</span></p>
-                <button><i class="fas fa-check-circle"></i></button>
+            <div class="carte">
+                <div class="titre-carte">
+                    <h2>ENTREES</h2>
+                    <div class="bordure1"></div>
+                </div>
+                <div class="carte-description">
+                    <h3>Fricassée d'escargot</h3>
+                    <p>Au piment d'espelette <span>25€</span></p>
+                    <button><i class="fas fa-check-circle"></i></button>
+                </div>
+                <div class="carte-description">
+                    <h3>Foie gras de canard mi-cuit</h3>
+                    <p>Et ses copeaux de truffe noire <span>35€</span></p>
+                    <button><i class="fas fa-check-circle"></i></button>
+                </div>
+                <div class="carte-description">
+                    <h3>Oeuf au plat</h3>
+                    <p>Assaisonné à la truffe sur lit de caviar <span>20€</span></p>
+                    <button><i class="fas fa-check-circle"></i></button>
+                </div>
             </div>
-            <div class="desserts">
-                <h3>Macaron au chocolat d'exception</h3>
-                <p>Et glace à la vanille de Madagascar <span>22€</span></p>
-                <button><i class="fas fa-check-circle"></i></button>
-            </div>
-            <div class="desserts">
-                <h3>Mousse au chocolat</h3>
-                <p>Au piment d'Espelette et à la truffe noire <span>23€</span></p>
-                <button><i class="fas fa-check-circle"></i></button>
-            </div>
-        </section>
 
-        <button>Commander</button>
+            <div class="carte">
+                <div class="titre-carte">
+                    <h2>PLATS</h2>
+                    <div class="bordure2"></div>
+                </div>
+                <div class="carte-description">
+                    <h3>Filet de boeuf aux herbes</h3>
+                    <p>Accompagné de sa ribambelle de légumes <span>40€</span></p>
+                    <button><i class="fas fa-check-circle"></i></button>
+                </div>
+                <div class="carte-description">
+                    <h3><h2>Plats</h2>Parmentier de queue de boeuf</h3>
+                    <p>À la truffe noire sur sa purée de panais <span>35€</span></p>
+                    <button><i class="fas fa-check-circle"></i></button>
+                </div>
+                <div class="carte-description">
+                    <h3>Filet de turbot</h3>
+                    <p>Aux agrumes <span>44€</span></p>
+                    <button><i class="fas fa-check-circle"></i></button>
+                </div>
+            </div>
+
+            <div class="carte">
+                <div class="titre-carte">
+                    <h2>DESSERTS</h2>
+                    <div class="bordure3"></div>
+                </div>
+                <div class="carte-description">
+                    <h3>Paris-Brest</h3>
+                    <p>Revisité <span>18€</span></p>
+                    <button><i class="fas fa-check-circle"></i></button>
+                </div>
+                <div class="carte-description">
+                    <h3>Macaron au chocolat d'exception</h3>
+                    <p>Et glace à la vanille de Madagascar <span>22€</span></p>
+                    <button><i class="fas fa-check-circle"></i></button>
+                </div>
+                <div class="carte-description">
+                    <h3>Mousse au chocolat</h3>
+                    <p>Au piment d'Espelette et à la truffe noire <span>23€</span></p>
+                    <button><i class="fas fa-check-circle"></i></button>
+                </div>
+            </div>
+        
+            <button>Commander</button>
+
+        </section>
 
         <!-- Pied de la page -->
 
