--- a/menu3.html
+++ b/menu3.html
@@ -32,65 +32,68 @@
             <i class="far fa-heart"></i>
         </div>
 
-        <section>
-            <h2>Entrées</h2>
-            <div class="entrees">
-                <h3>Tartare de poulpe acidulé</h3>
-                <p>Aux zestes d'orange <span>25€</span></p>
-                <button><i class="fas fa-check-circle"></i></button>
+        <section class="carte-menu">
+
+            <div class="carte">
+                <h2>Plats</h2>
+                <div class="carte-description">
+                    <h3>Tartare de poulpe acidulé</h3>
+                    <p>Aux zestes d'orange <span>25€</span></p>
+                    <button><i class="fas fa-check-circle"></i></button>
+                </div>
+                <div class="carte-description">
+                    <h3>Velouté de légumes d'antan</h3>
+                    <p>Carotte, panais, topinambour <span>35€</span></p>
+                    <button><i class="fas fa-check-circle"></i></button>
+                </div>
+                <div class="carte-description">
+                    <h3>Soupe à l'oignon</h3>
+                    <p>Revisitée <span>20€</span></p>
+                    <button><i class="fas fa-check-circle"></i></button>
+                </div>
             </div>
-            <div class="entrees">
-                <h3>Velouté de légumes d'antan</h3>
-                <p>Carotte, panais, topinambour <span>35€</span></p>
-                <button><i class="fas fa-check-circle"></i></button>
+    
+            <div class="carte">
+                <h2>Plats</h2>
+                <div class="carte-description">
+                    <h3>Coquilles Saint-Jacques</h3>
+                    <p>Accompagnées d'une purée de panais <span>40€</span></p>
+                    <button><i class="fas fa-check-circle"></i></button>
+                </div>
+                <div class="carte-description">
+                    <h3>Magret de canard</h3>
+                    <p>Et parmentier de pommes de terre <span>35€</span></p>
+                    <button><i class="fas fa-check-circle"></i></button>
+                </div>
+                <div class="carte-description">
+                    <h3>Pigeonneau d’Ille-et-Vilaine</h3>
+                    <p>Sur son lit de gnocchis aux légumes <span>44€</span></p>
+                    <button><i class="fas fa-check-circle"></i></button>
+                </div>
             </div>
-            <div class="entrees">
-                <h3>Soupe à l'oignon</h3>
-                <p>Revisitée <span>20€</span></p>
-                <button><i class="fas fa-check-circle"></i></button>
+
+            <div class="carte">
+                <h2>Desserts</h2>
+                <div class="carte-description">
+                    <h3>Pétales de violettes glacés</h3>
+                    <p>Et purée de noisettes <span>18€</span></p>
+                    <button><i class="fas fa-check-circle"></i></button>
+                </div>
+                <div class="carte-description">
+                    <h3>Fondant au chocolat</h3>
+                    <p>Revisité <span>22€</span></p>
+                    <button><i class="fas fa-check-circle"></i></button>
+                </div>
+                <div class="carte-description">
+                    <h3>Millefeuille croustillant</h3>
+                    <p>Myrtilles et pâte d’amande <span>23€</span></p>
+                    <button><i class="fas fa-check-circle"></i></button>
+                </div>
             </div>
+
+            <button>Commander</button>
+
         </section>
-
-        <section>
-            <h2>Plats</h2>
-            <div class="plats">
-                <h3>Coquilles Saint-Jacques</h3>
-                <p>Accompagnées d'une purée de panais <span>40€</span></p>
-                <button><i class="fas fa-check-circle"></i></button>
-            </div>
-            <div class="plats">
-                <h3>Magret de canard</h3>
-                <p>Et parmentier de pommes de terre <span>35€</span></p>
-                <button><i class="fas fa-check-circle"></i></button>
-            </div>
-            <div class="plats">
-                <h3>Pigeonneau d’Ille-et-Vilaine</h3>
-                <p>Sur son lit de gnocchis aux légumes <span>44€</span></p>
-                <button><i class="fas fa-check-circle"></i></button>
-            </div>
-        </section>
-
-        <section>
-            <h2>Desserts</h2>
-
-            <div class="desserts">
-                <h3>Pétales de violettes glacés</h3>
-                <p>Et purée de noisettes <span>18€</span></p>
-                <button><i class="fas fa-check-circle"></i></button>
-            </div>
-            <div class="desserts">
-                <h3>Fondant au chocolat</h3>
-                <p>Revisité <span>22€</span></p>
-                <button><i class="fas fa-check-circle"></i></button>
-            </div>
-            <div class="desserts">
-                <h3>Millefeuille croustillant</h3>
-                <p>Myrtilles et pâte d’amande <span>23€</span></p>
-                <button><i class="fas fa-check-circle"></i></button>
-            </div>
-        </section>
-
-        <button>Commander</button>
 
         <!-- Pied de la page -->
 
