--- a/menu4.html
+++ b/menu4.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 
-    <!-- En-tête de la page -->
+   <!-- En-tête de la page -->
 
     <head>
         <meta charset="utf-8">
@@ -32,65 +32,67 @@
             <i class="far fa-heart"></i>
         </div>
 
-        <section>
-            <h2>Entrées</h2>
-            <div class="entrees">
-                <h3>Tartare de thon</h3>
-                <p>Assaisonné au yuzu <span>25€</span></p>
-                <button><i class="fas fa-check-circle"></i></button>
+        <section class="carte-menu">
+            <div class="carte">
+                <h2>Entrées</h2>
+                <div class="carte-description">
+                    <h3>Tartare de thon</h3>
+                    <p>Assaisonné au yuzu <span>25€</span></p>
+                    <button><i class="fas fa-check-circle"></i></button>
+                </div>
+                <div class="carte-description">
+                    <h3>Bouchée de homard croustillant</h3>
+                    <p>Et sa farandole de petits légumes <span>35€</span></p>
+                    <button><i class="fas fa-check-circle"></i></button>
+                </div>
+                <div class="carte-description">
+                    <h3>Velouté de cèpes</h3>
+                    <p>Aux truffes <span>20€</span></p>
+                    <button><i class="fas fa-check-circle"></i></button>
+                </div>
             </div>
-            <div class="entrees">
-                <h3>Bouchée de homard croustillant</h3>
-                <p>Et sa farandole de petits légumes <span>35€</span></p>
-                <button><i class="fas fa-check-circle"></i></button>
+        
+            <div class="carte">
+                <h2>Plats</h2>
+                <div class="carte-description">
+                    <h3>Poulet rôti aux herbes de Provence</h3>
+                    <p>Et sa crème de truffe <span>40€</span></p>
+                    <button><i class="fas fa-check-circle"></i></button>
+                </div>
+                <div class="carte-description">
+                    <h3>Langouste rôtie</h3>
+                    <p>Et ses légumes de saison <span>35€</span></p>
+                    <button><i class="fas fa-check-circle"></i></button>
+                </div>
+                <div class="carte-description">
+                    <h3>Côte de boeuf Angus</h3>
+                    <p>Et sa purée de panais <span>44€</span></p>
+                    <button><i class="fas fa-check-circle"></i></button>
+                </div>
             </div>
-            <div class="entrees">
-                <h3>Velouté de cèpes</h3>
-                <p>Aux truffes <span>20€</span></p>
-                <button><i class="fas fa-check-circle"></i></button>
+
+            <div class="carte">
+                <h2>Desserts</h2>
+                <div class="carte-description">
+                    <h3>Farandole de desserts</h3>
+                    <p>Du chef <span>18€</span></p>
+                    <button><i class="fas fa-check-circle"></i></button>
+                </div>
+                <div class="carte-description">
+                    <h3>Crème brulée</h3>
+                    <p>Revisitée <span>22€</span></p>
+                    <button><i class="fas fa-check-circle"></i></button>
+                </div>
+                <div class="carte-description">
+                    <h3>Tiramisu</h3>
+                    <p>À la noisette <span>23€</span></p>
+                    <button><i class="fas fa-check-circle"></i></button>
+                </div>
             </div>
+
+            <button>Commander</button>
+
         </section>
-
-        <section>
-            <h2>Plats</h2>
-            <div class="plats">
-                <h3>Poulet rôti aux herbes de Provence</h3>
-                <p>Et sa crème de truffe <span>40€</span></p>
-                <button><i class="fas fa-check-circle"></i></button>
-            </div>
-            <div class="plats">
-                <h3>Langouste rôtie</h3>
-                <p>Et ses légumes de saison <span>35€</span></p>
-                <button><i class="fas fa-check-circle"></i></button>
-            </div>
-            <div class="plats">
-                <h3>Côte de boeuf Angus</h3>
-                <p>Et sa purée de panais <span>44€</span></p>
-                <button><i class="fas fa-check-circle"></i></button>
-            </div>
-        </section>
-
-        <section>
-            <h2>Desserts</h2>
-
-            <div class="desserts">
-                <h3>Farandole de desserts</h3>
-                <p>Du chef <span>18€</span></p>
-                <button><i class="fas fa-check-circle"></i></button>
-            </div>
-            <div class="desserts">
-                <h3>Crème brulée</h3>
-                <p>Revisitée <span>22€</span></p>
-                <button><i class="fas fa-check-circle"></i></button>
-            </div>
-            <div class="desserts">
-                <h3>Tiramisu</h3>
-                <p>À la noisette <span>23€</span></p>
-                <button><i class="fas fa-check-circle"></i></button>
-            </div>
-        </section>
-
-        <button>Commander</button>
 
         <!-- Pied de la page -->
 
