--- a/accueil.html
+++ b/accueil.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="fr">
-    
+
     <!-- En-tête de la page -->
 
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Ohmyfood">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;700&family=Shrikhand&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;700&family=Shrikhand&display=swap"
+            rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
             integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
             crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="stylesheet" href="css/accueil-mobile.css"  media="screen and (max-width: 768px)">
+        <link rel="stylesheet" href="css/accueil.css">
         <link rel="stylesheet" href="css/accueil-desktop.css">
         <title>Ohmyfood</title>
     </head>
@@ -20,29 +21,43 @@
     <!-- Corps de la page -->
 
     <body>
+
         <header>
-           <!-- <img src="images/logo/ohmyfood@2x.svg" alt="logo">-->
-           <h1>ohmyfood</h1>
+            <!-- <img src="images/logo/ohmyfood@2x.svg" alt="logo">-->
+            <h1>ohmyfood</h1>
             <nav>
                 <i class="fas fa-map-marker-alt"></i>
                 <p><strong>Paris, Belleville</strong></p>
             </nav>
         </header>
 
-        <article>
-            <h2>Réservez le menu qui<br> vous convient</h2>
-            <p>Découvrez des restaurants d'exception,<br> sélectionnés par nos soins.</p>
-            <button class="degrade">Explorer nos restaurants</button>
-            
-        </article>
+        <section class="information">
+            <article>
+                <h2>Réservez le menu qui<br> vous convient</h2>
+                <p>Découvrez des restaurants d'exception,<br> sélectionnés par nos soins.</p>
+                <div class="degrade">
+                    <a href="#">Explorer nos restaurants</a>
+                </div>
+            </article>
 
-        <section class="fonctionnement">
-            <h2>Fonctionnement</h2>
-            <ol>
-                <li><a href="#"><i class="fas fa-mobile-alt fa-lg" ></i> Choisissez un restaurant</a></li>
-                <li><a href="#"><i class="fas fa-list-ul fa-lg"></i> Composez votre menu</a></li>
-                <li><a href="#"><i class="fas fa-store fa-lg"></i> Dégustez au restaurant</a></li>
-            </ol>
+            <div class="fonctionnement">
+                <h2>Fonctionnement</h2>
+                <div class="liste-fonc">
+                    <p class="numero">1</p>
+                    <p><i class="fas fa-mobile-alt fa-lg"></i></p>
+                    <p class="texte">Choisissez un restaurant</p>
+                </div>
+                <div class="liste-fonc">
+                    <p class="numero">2</p>
+                    <p><i class="fas fa-list-ul fa-lg"></i></p>
+                    <p class="texte">Composez votre menu</p>
+                </div>
+                <div class="liste-fonc">
+                    <p class="numero">3</p>
+                    <p><i class="fas fa-store fa-lg"></i></p>
+                    <p class="texte">Dégustez au restaurant</p>
+                </div>
+            </div>
         </section>
 
         <section class="restaurants">
@@ -53,12 +68,14 @@
                         <img src="images/restaurants/jay-wennington-n_y88twmgwa-uns.png" alt="La palette du goût">
                         <p class="etiquette">Nouveau</p>
                     </div>
-                    <div class="info-titre">
-                        <h3>La palette du goût</h3>
-                        <i class="far fa-heart fa-lg"></i>
-                    </div>
-                    <p class="info">Ménilmontant</p>
                 </a>
+                <div class="info-titre">
+                    <a href="menu1.html">
+                        <h3>La palette du goût</h3>
+                        <p class="info">Ménilmontant</p>
+                    </a>
+                    <i class="far fa-heart fa-lg"></i>
+                </div>
             </div>
             <div class="carte">
                 <a href="menu2.html">
@@ -66,12 +83,15 @@
                         <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.png" alt="La note enchantée">
                         <p class="etiquette">Nouveau</p>
                     </div>
-                    <div class="info-titre">
-                        <h3>La note enchantée</h3>
-                        <i class="far fa-heart fa-lg"></i>
-                    </div>
-                    <p class="info">Charonne</p>
                 </a>
+                <div class="info-titre">
+                    <a href="menu2.html">
+                        <h3>La note enchantée</h3>
+                        <p class="info">Charonne</p>
+                    </a>
+                    <i class="far fa-heart fa-lg"></i>
+                    <i class="fas fa-heart fa-lg"></i>
+                </div>
             </div>
             <div class="carte">
                 <a href="menu3.html">
@@ -79,12 +99,15 @@
                         <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.png" alt="À la française">
                         <p class="etiquette">Nouveau</p>
                     </div>
-                    <div class="info-titre">
-                        <h3>À la française</h3>
-                        <i class="far fa-heart fa-lg"></i>
-                    </div>
-                    <p class="info">Cité Rouge</p>
                 </a>
+                <div class="info-titre">
+                    <a href="menu.html">
+                        <h3>À la française</h3>
+                        <p class="info">Cité Rouge</p>
+                    </a>
+                    <i class="far fa-heart fa-lg"></i>
+                    <i class="fas fa-heart fa-lg"></i>
+                </div>
             </div>
             <div class="carte">
                 <a href="menu4.html">
@@ -93,12 +116,15 @@
                             alt="Le délice des sens">
                         <p class="etiquette">Nouveau</p>
                     </div>
-                    <div class="info-titre">
-                        <h3>Le délice des sens </h3>
-                        <i class="far fa-heart fa-lg"></i>
-                    </div>
-                    <p class="info">Folie-Méricourt</p>
                 </a>
+                <div class="info-titre">
+                    <a href="menu.html">
+                        <h3>Le délice des sens</h3>
+                        <p class="info">Folie-Méricourt</p>
+                    </a>
+                    <i class="far fa-heart fa-lg"></i>
+                    <i class="fas fa-heart fa-lg"></i>
+                </div>
             </div>
         </section>
 
@@ -106,12 +132,12 @@
 
         <footer>
             <h2>ohmyfood</h2>
-                <div class="footer">
-                    <p><i class="fas fa-utensils"></i> Proposer un restaurant</p>
-                    <p><i class="fas fa-hands-helping fa-xs"></i> Devenir partenaire</p>
-                    <p>Mentions légales</li>
-                    <p><a href="mailto:ohmyfood@contact.com" title="Contact" target="_blank">Contact</a></p>
-                </div>
+            <div class="footer">
+                <p><i class="fas fa-utensils"></i> Proposer un restaurant</p>
+                <p><i class="fas fa-hands-helping fa-xs"></i> Devenir partenaire</p>
+                <p>Mentions légales</li>
+                <p><a href="mailto:ohmyfood@contact.com" title="Contact" target="_blank">Contact</a></p>
+            </div>
         </footer>
     </body>
 </html>
