--- a/accueil.html
+++ b/accueil.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 
-    <!-- En-tête de la page -->
+<!-- En-tête de la page -->
 
     <head>
         <meta charset="utf-8">
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
             integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
             crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="stylesheet" href="css/accueil.css">
+        <link rel="stylesheet" href="css/accueil-mobile.css">
         <link rel="stylesheet" href="css/accueil-desktop.css">
         <title>Ohmyfood</title>
     </head>
@@ -21,6 +21,13 @@
     <!-- Corps de la page -->
 
     <body>
+
+        <div class="loader">
+            <p>Ohmyfood</p>
+            <div class="ball" id="ball-1"></div>
+            <div class="ball" id="ball-2"></div>
+            <div class="ball" id="ball-3"></div>
+        </div>
 
         <header>
             <!-- <img src="images/logo/ohmyfood@2x.svg" alt="logo">-->
@@ -140,4 +147,5 @@
             </div>
         </footer>
     </body>
+
 </html>
