--- a/accueil.html
+++ b/accueil.html
@@ -15,6 +15,7 @@
             crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="css/accueil-mobile.css">
         <link rel="stylesheet" href="css/accueil-desktop.css">
+        <link rel="stylesheet" href="css/accueil-tablette.css">
         <title>Ohmyfood</title>
     </head>
 
@@ -82,6 +83,7 @@
                         <p class="info">Ménilmontant</p>
                     </a>
                     <i class="far fa-heart fa-lg"></i>
+                    <i class="fas fa-heart fa-lg"></i>
                 </div>
             </div>
             <div class="carte">
