--- a/menu1.html
+++ b/menu1.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
             integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
             crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="stylesheet" href="css/menu-mobile.css" media="screen and (max-width: 768px)">
+        <link rel="stylesheet" href="css/menu-mobile.css">
         <link rel="stylesheet" href="css/menu-desktop.css">
         <title>Ohmyfood, La palette du goût</title>
     </head>
@@ -42,7 +42,8 @@
                         <h2>ENTREES</h2>
                         <div class="bordure"></div>
                     </div>
-                    <div class="carte-description">
+                   
+                    <div class="carte-description"> 
                         <div class="info">
                             <h3>Fricassée d'escargot</h3>
                             <p>Au piment d'espelette </p>
