--- a/La palette du goût.html
+++ b/La palette du goût.html
@@ -22,7 +22,7 @@
 
     <body>
         <header>
-            <a href="accueil.html"><i class="fas fa-arrow-left"></i></a>
+            <a href="style.html"><i class="fas fa-arrow-left"></i></a>
             <!--  <img src="images/logo/ohmyfood@2x.svg" alt="Logo">-->
             <img src="images/logo/ohmyfood.png" alt="Logo">
         </header>
