--- a/style.html
+++ b/style.html
@@ -13,9 +13,9 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
             integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
             crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="stylesheet" href="css/accueil-mobile.css">
-        <link rel="stylesheet" href="css/accueil-desktop.css">
-        <link rel="stylesheet" href="css/accueil-tablette.css">
+        <link rel="stylesheet" href="css/style-mobile.css">
+        <link rel="stylesheet" href="css/style-desktop.css">
+        <link rel="stylesheet" href="css/style-tablette.css">
         <title>Ohmyfood</title>
     </head>
 
@@ -71,14 +71,14 @@
         <section class="restaurants">
             <h2>Restaurants</h2>
             <div class="carte">
-                <a href="menu1.html">
+                <a href="La palette du goût.html">
                     <div class="carte-image">
                         <img src="images/restaurants/jay-wennington-n_y88twmgwa-uns.png" alt="La palette du goût">
                         <p class="etiquette">Nouveau</p>
                     </div>
                 </a>
                 <div class="info-titre">
-                    <a href="menu1.html">
+                    <a href="La palette du goût.html">
                         <h3>La palette du goût</h3>
                         <p class="info">Ménilmontant</p>
                     </a>
@@ -87,14 +87,14 @@
                 </div>
             </div>
             <div class="carte">
-                <a href="menu2.html">
+                <a href="La note enchantée.html">
                     <div class="carte-image">
                         <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.png" alt="La note enchantée">
                         <p class="etiquette">Nouveau</p>
                     </div>
                 </a>
                 <div class="info-titre">
-                    <a href="menu2.html">
+                    <a href="La note enchantée.html">
                         <h3>La note enchantée</h3>
                         <p class="info">Charonne</p>
                     </a>
@@ -103,14 +103,14 @@
                 </div>
             </div>
             <div class="carte">
-                <a href="menu3.html">
+                <a href="À la française.html">
                     <div class="carte-image">
                         <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.png" alt="À la française">
                         <p class="etiquette">Nouveau</p>
                     </div>
                 </a>
                 <div class="info-titre">
-                    <a href="menu.html">
+                    <a href="À la française.html">
                         <h3>À la française</h3>
                         <p class="info">Cité Rouge</p>
                     </a>
@@ -119,7 +119,7 @@
                 </div>
             </div>
             <div class="carte">
-                <a href="menu4.html">
+                <a href="Le délice des sens.html">
                     <div class="carte-image">
                         <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.png"
                             alt="Le délice des sens">
@@ -127,7 +127,7 @@
                     </div>
                 </a>
                 <div class="info-titre">
-                    <a href="menu.html">
+                    <a href="Le délice des sens.html">
                         <h3>Le délice des sens</h3>
                         <p class="info">Folie-Méricourt</p>
                     </a>
