--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
             integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
             crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="stylesheet" href="css/style-mobile.css">
-        <link rel="stylesheet" href="css/style-desktop.css">
-        <link rel="stylesheet" href="css/style-tablette.css">
+        <link rel="stylesheet" href="css/index-mobile.css">
+        <link rel="stylesheet" href="css/index-desktop.css">
+        <link rel="stylesheet" href="css/index-tablette.css">
         <title>Ohmyfood</title>
     </head>
 
