Modification de la mise en page

--- a/À la française.html
+++ b/À la française.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
             integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
             crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="stylesheet" href="css/menu-mobile.css" media="screen and (max-width: 768px)">
+        <link rel="stylesheet" href="css/menu-mobile.css">
         <link rel="stylesheet" href="css/menu-desktop.css">
         <title>Ohmyfood, À la française</title>
     </head>
@@ -26,8 +26,9 @@
             <img src="images/logo/ohmyfood@2x.svg" alt="Logo">
         </header>
     
-        <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
-    
+        <div class="banniere">
+            <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
+        </div>
         <form>
             <section class="carte-menu">
                 <div class="titre">
