--- a/index.html
+++ b/index.html
@@ -49,33 +49,33 @@
 
         <div class="fonctionnement">
             <h2>Fonctionnement</h2>
-            <div class="liste-fonc">
-                <p class="numero">1</p>
+            <div class="list-fonc">
+                <p class="number">1</p>
                 <p><i class="fas fa-mobile-alt fa-lg"></i></p>
-                <p class="texte">Choisissez un restaurant</p>
+                <p class="text">Choisissez un restaurant</p>
             </div>
-            <div class="liste-fonc">
-                <p class="numero">2</p>
+            <div class="list-fonc">
+                <p class="number">2</p>
                 <p><i class="fas fa-list-ul fa-lg"></i></p>
-                <p class="texte">Composez votre menu</p>
+                <p class="text">Composez votre menu</p>
             </div>
-            <div class="liste-fonc">
-                <p class="numero">3</p>
+            <div class="list-fonc">
+                <p class="number">3</p>
                 <p><i class="fas fa-store fa-lg"></i></p>
-                <p class="texte">Dégustez au restaurant</p>
+                <p class="text">Dégustez au restaurant</p>
             </div>
         </div>
 
         <section class="restaurants">
             <h2>Restaurants</h2>
-            <div class="carte">
+            <div class="card">
                 <a href="La-palette-du-goût.html">
-                    <div class="carte-image">
+                    <div class="card-image">
                         <img src="images/restaurants/jay-wennington-n_y88twmgwa-uns.png" alt="La palette du goût">
-                        <p class="etiquette">Nouveau</p>
+                        <p class="band">Nouveau</p>
                     </div>
                 </a>
-                <div class="info-titre">
+                <div class="heading-card">
                     <a href="La-palette-du-goût.html">
                         <h3>La palette du goût</h3>
                         <p class="info">Ménilmontant</p>
@@ -84,14 +84,14 @@
                     <i class="fas fa-heart fa-lg"></i>
                 </div>
             </div>
-            <div class="carte">
+            <div class="card">
                 <a href="La-note-enchantée.html">
-                    <div class="carte-image">
+                    <div class="card-image">
                         <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.png" alt="La note enchantée">
-                        <p class="etiquette">Nouveau</p>
+                        <p class="band">Nouveau</p>
                     </div>
                 </a>
-                <div class="info-titre">
+                <div class="heading-card">
                     <a href="La-note-enchantée.html">
                         <h3>La note enchantée</h3>
                         <p class="info">Charonne</p>
@@ -100,14 +100,14 @@
                     <i class="fas fa-heart fa-lg"></i>
                 </div>
             </div>
-            <div class="carte">
+            <div class="card">
                 <a href="À-la-française.html">
-                    <div class="carte-image">
+                    <div class="card-image">
                         <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.png" alt="À la française">
-                        <p class="etiquette">Nouveau</p>
+                        <p class="band">Nouveau</p>
                     </div>
                 </a>
-                <div class="info-titre">
+                <div class="heading-card">
                     <a href="À-la-française.html">
                         <h3>À la française</h3>
                         <p class="info">Cité Rouge</p>
@@ -116,15 +116,15 @@
                     <i class="fas fa-heart fa-lg"></i>
                 </div>
             </div>
-            <div class="carte">
+            <div class="card">
                 <a href="Le-délice-des-sens.html">
-                    <div class="carte-image">
+                    <div class="card-image">
                         <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.png"
                             alt="Le délice des sens">
-                        <p class="etiquette">Nouveau</p>
+                        <p class="band">Nouveau</p>
                     </div>
                 </a>
-                <div class="info-titre">
+                <div class="heading-card">
                     <a href="Le-délice-des-sens.html">
                         <h3>Le délice des sens</h3>
                         <p class="info">Folie-Méricourt</p>
