changement de feuille css

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
             integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
             crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="stylesheet" href="css/accueil.css">
+        <link rel="stylesheet" href="css/main.css">
         <title>Ohmyfood</title>
     </head>
 
@@ -66,55 +66,55 @@
 
         <section class="restaurants">
             <h2>Restaurants</h2>
-            <div class="card">
+            <div class="card-restaurants">
                 <a href="La-palette-du-gout.html">
                     <div class="card-image">
                         <img src="images/restaurants/jay-wennington-n_y88twmgwa-uns.png" alt="La palette du goût">
                         <p class="band">Nouveau</p>
                     </div>
                 </a>
-                <div class="heading-card">
+                <div class="info-card">
                     <a href="La-palette-du-gout.html">
                         <h3>La palette du goût</h3>
-                        <p class="info">Ménilmontant</p>
+                        <p class="location">Ménilmontant</p>
                     </a>
                     <i class="far fa-heart fa-lg"></i>
                     <i class="fas fa-heart fa-lg"></i>
                 </div>
             </div>
-            <div class="card">
+            <div class="card-restaurants">
                 <a href="La-note-enchantee.html">
                     <div class="card-image">
                         <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.png" alt="La note enchantée">
                         <p class="band">Nouveau</p>
                     </div>
                 </a>
-                <div class="heading-card">
+                <div class="info-card">
                     <a href="La-note-enchantee.html">
                         <h3>La note enchantée</h3>
-                        <p class="info">Charonne</p>
+                        <p class="location">Charonne</p>
                     </a>
                     <i class="far fa-heart fa-lg"></i>
                     <i class="fas fa-heart fa-lg"></i>
                 </div>
             </div>
-            <div class="card">
+            <div class="card-restaurants">
                 <a href="A-la-francaise.html">
                     <div class="card-image">
                         <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.png" alt="À la française">
                         <p class="band">Nouveau</p>
                     </div>
                 </a>
-                <div class="heading-card">
+                <div class="info-card">
                     <a href="A-la-francaise.html">
                         <h3>À la française</h3>
-                        <p class="info">Cité Rouge</p>
+                        <p class="location">Cité Rouge</p>
                     </a>
                     <i class="far fa-heart fa-lg"></i>
                     <i class="fas fa-heart fa-lg"></i>
                 </div>
             </div>
-            <div class="card">
+            <div class="card-restaurants">
                 <a href="Le-delice-des-sens.html">
                     <div class="card-image">
                         <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.png"
@@ -122,10 +122,10 @@
                         <p class="band">Nouveau</p>
                     </div>
                 </a>
-                <div class="heading-card">
+                <div class="info-card">
                     <a href="Le-delice-des-sens.html">
                         <h3>Le délice des sens</h3>
-                        <p class="info">Folie-Méricourt</p>
+                        <p class="location">Folie-Méricourt</p>
                     </a>
                     <i class="far fa-heart fa-lg"></i>
                     <i class="fas fa-heart fa-lg"></i>
