--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         </div>
 
         <header>
-            <!-- <img src="images/logo/ohmyfood@2x.svg" alt="logo">-->
-            <h1>ohmyfood</h1>
+             <img src="images/logo/ohmyfood@2x.svg" alt="logo">
+           <!-- <h1>ohmyfood</h1>-->
             <nav>
                 <i class="fas fa-map-marker-alt"></i>
                 <p><strong>Paris, Belleville</strong></p>
